# Proiect-POO-Car-Auction-House

./: AuctionManager.cpp  AuctionManager.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Derivate.cpp  Derivate.h  README.md  SpecificatiiTehnice.cpp  SpecificatiiTehnice.h  Templates.h  Vehicul.cpp  Vehicul.h  VehiculFactory.cpp  VehiculFactory.h  auction.db  main.cpp  tabele.sql
